2009-02-21 Guido Scholz <guido.scholz@bayernline.de>
	* guiwidget.*, modularsynth.cpp: Saving of parameter view
	settings reorganized, reading of float slider parameters
	enabled.
	* guiwidget.*: Inherit parameter view widget from QDialog to
	create a proper window decoration.

2009-02-18 Guido Scholz <guido.scholz@bayernline.de>
	* colorwidget.*, prefwidget.cpp: Color widget class moved to
	separate file, missing Q_OBJECT macro added.
	* prefwidget.*, modularsynth.*: Unused code removed.

2008-11-09 Frank Kober <goemusic@yahoo.fr>
	* ams_fr.ts: French translation added.

2008-09-02 Guido Scholz <guido.scholz@bayernline.de>
	* configure.ac: Removed obsolete assignments to LIBS variable.
	* port.h, module.cpp: Port direction is private now.

2008-08-30 Guido Scholz <guido.scholz@bayernline.de>
	* modularsynth.cpp: Prevent double inport connection. Beep
	instead of error message if user tries wrong connection. Fix
	resorting of recently opened files list.

2008-08-29 Guido Scholz <guido.scholz@bayernline.de>
	* modularsynth.*, module.*, port.*: List of ports now is private
	to module, port selection rewritten.

2008-08-27 Guido Scholz <guido.scholz@bayernline.de>
	* synthdata.*: Fixed crash caused by Alsa SND_SEQ_EVENT_SYSEX
	events.
	* midicontrollerlist.*: Empty files removed.
	* midicontroller.*: Possible fix for broken MIDI event type
	transformation if type values are > 127 (changed "int" to
	"unsigned int"). Untested.
	* modularsynth.cpp: Application name added to MIDI in/out port
	name.

2008-08-17 Guido Scholz <guido.scholz@bayernline.de>
	* INSTALL: File replaced by generic file which comes with the
	autotools set.

2008-07-27 Guido Scholz <guido.scholz@bayernline.de>
	* whole package: Sourcecode files moved to new src subdirectory
	and newly developed autotools framework added.
	* man/ams.1: Lost man page added.

2008-07-15 Guido Scholz <guido.scholz@bayernline.de>
	* mainwindow.cpp, modularsynth.cpp: Menu for recently opened
	files added.